syntax = "proto3";
option java_multiple_files = true;

package proto.dtos;

enum Nombre {
    DESCONOCIDO = 0;
    PRESIDENTE = 1;
    VOCAL = 2;
    COORDINADOR = 3;
    VOLUNTARIO = 4;
}

message RolProto {
	Nombre nombre = 1;
}